Updated yarn.lock and fixed theme toggle on mobile

--- a/src/components/PageContainer.module.css
+++ b/src/components/PageContainer.module.css
@@ -16,9 +16,3 @@
   color: var(--blue-color);
   transform: translateY(-10px);
 }
-
-.theme_toggle {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-}
