--- a/src/components/ThemeToggle.css
+++ b/src/components/ThemeToggle.css
@@ -31,5 +31,6 @@
 }
 
 .custom.react-toggle {
-  display: block;
+  margin: auto 0.5rem;
+  width: 50px;
 }
